--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-starter",
+  "name": "webpack-calculator-sass",
   "version": "1.0.0",
-  "description": "A light foundation for your next frontend project based on webpack.",
+  "description": "A calculator javascript practice :)",
   "private": true,
   "scripts": {
     "lint": "npm run lint:styles; npm run lint:scripts",
